--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Raial Oliech  | WDD 130</title>
+    <title>Raila Oliech  | WDD 130</title>
   </head>
   <body>
     <header>
