--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
       <h1>Raial Oliech | WDD 130</h1>
-      <img src="images/profile.jpg" alt="Hello, my name is Raial Oliech " width="200">
+      <img src="images/profile.jpg" alt="Hello, my name is Raila Oliech " width="200">
       <p>Hello! My name is Raila Oliech and I am from Nairobi, Kenya. I enjoy eating fish
          and eggs and I'm the marketing director at great Technology. We're developing some 
          innovative marketing campaigns designed to engage new customers right in the 
