--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          more about what they're looking for from their smart devices. </p>
     </main>
     <footer>
-      <p>©️2023 Raila Oliech  🌳  Nairobi 🌳 Kenya</p>
+      <p>©️2023 🌳 Raila Oliech  🌳  Nairobi, Kenya</p>
     </footer>
   </body>
 </html>
