--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
     <main>
       <h1>Raila Oliech | WDD 130</h1>
       <img src="images/profile.jpg" alt="Hello, my name is Raila Oliech " width="200">
-      <p>Hello! My name is Raila Oliech and I am from Nairobi, Kenya. I enjoy eating fish
-         and eggs and I'm the marketing director at great Technology. We're developing some 
-         innovative marketing campaigns designed to engage new customers right in the 
-         streets of Kosiga. I love chatting with residents around the area and learning 
-         more about what they're looking for from their smart devices. </p>
+      <p>Hello! My name is Raila Oliech and I am from Nairobi, Kenya. I enjoy eating fish and
+         eggs. I'm working as the assistant clerk at Kosiga company and i love my job. When
+         I have free time, I like reading, I like all types of books, but now I´m reading about
+         health, positive psychology, spirituality and neuroscience. I also like doing yoga. I
+         like learning as it gives us a feeling of accomplishment which, in turn, boosts our 
+         confidence in our own capabilities; you'll also feel more ready to take on challenges
+         and explore new business ventures. Acquiring new skills will unveil new opportunities 
+         and help you find innovative solutions to problems.</p>
     </main>
     <footer>
       <p>©️2023 🌳 Raila Oliech  🌳  Nairobi, Kenya</p>
