--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
       <nav>
         <a href="#">Home</a>
-        <a href="wwr/">White Water Rafting Website</a>
-        <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+        <a href="wwr/">Education Website</a>
+        <a href="wwr/site-plan-rafting.html">Learning Siteplan</a>
       </nav>
     </header>
     <main>
@@ -22,7 +22,7 @@
          I have free time, I like reading, I like all types of books, but now I´m reading about
          health, positive psychology, spirituality and neuroscience. I also like doing yoga. I
          like learning as it gives us a feeling of accomplishment which, in turn, boosts our 
-         confidence in our own capabilities; you'll also feel more ready to take on challenges
+         confidence in our own capabilities, you'll also feel more ready to take on challenges
          and explore new business ventures. Acquiring new skills will unveil new opportunities 
          and help you find innovative solutions to problems.</p>
     </main>
