--- a/index.html
+++ b/index.html
@@ -2,29 +2,33 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <link rel="stylesheet" href="styles/styles.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Raial Oliech  | WDD 130</title>
+    <title>Raila Oliech  | WDD 130</title>
   </head>
   <body>
     <header>
       <nav>
         <a href="#">Home</a>
-        <a href="wwr/">White Water Rafting Website</a>
-        <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+        <a href="wwr/">Education Website</a>
+        <a href="wwr/site-plan-rafting.html">Learning Siteplan</a>
       </nav>
     </header>
     <main>
-      <h1>Raial Oliech | WDD 130</h1>
-      <img src="images/profile.jpg" alt="Hello, my name is Raial Oliech " width="200">
-      <p>Hello! My name is Raila Oliech and I am from Nairobi, Kenya. I enjoy eating fish
-         and eggs and I'm the marketing director at great Technology. We're developing some 
-         innovative marketing campaigns designed to engage new customers right in the 
-         streets of Kosiga. I love chatting with residents around the area and learning 
-         more about what they're looking for from their smart devices. </p>
+      <h1>Raila Oliech | WDD 130</h1>
+      <img src="images/profile.jpg" alt="Hello, my name is Raila Oliech " width="200">
+      <p>Hello! My name is Raila Oliech and I am from Nairobi, Kenya. I enjoy eating fish and
+         eggs. I'm working as the assistant clerk at Kosiga company and i love my job. When
+         I have free time, I like reading, I like all types of books, but now I´m reading about
+         health, positive psychology, spirituality and neuroscience. I also like doing yoga. I
+         like learning as it gives us a feeling of accomplishment which, in turn, boosts our 
+         confidence in our own capabilities, you'll also feel more ready to take on challenges
+         and explore new business ventures. Acquiring new skills will unveil new opportunities 
+         and help you find innovative solutions to problems.</p>
     </main>
     <footer>
-      <p>©️2023 Raial Oliech 🌳 Nairobi 🌳 Kenya</p>
+      <p>©️2023 🌳 Raila Oliech  🌳  Nairobi, Kenya</p>
     </footer>
   </body>
 </html>
