--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Raila Oliech  | WDD 130</title>
+    <meta name="description" content="Raila Oliech BYU-Idaho coarse home page, leaning path">
   </head>
   <body>
     <header>
@@ -27,6 +28,13 @@
          and explore new business ventures. Acquiring new skills will unveil new opportunities 
          and help you find innovative solutions to problems.</p>
     </main>
+    <aside>
+      <h2>Kenya</h2>
+      <img src="images/Kenya.jpg" alt="Kenya photo">
+      <p>Kenya is located in East Africa. Its terrain rises from a low coastal plain on 
+         the Indian Ocean to mountains and plateaus at its center. Most Kenyans live in 
+         the highlands, where Nairobi, the capital, sits at an altitude of 5,500 feet (1,700 meters).</p>
+    </aside>
     <footer>
       <p>©️2023 🌳 Raila Oliech  🌳  Nairobi, Kenya</p>
     </footer>
