add to home page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Raila Oliech  | WDD 130</title>
-    <meta name="description" content="Raila Oliech BYU-Idaho coarse home page, leaning path">
+    <meta name="description" content="Raila Oliech BYU-Idaho coarse home page, leaning path web.">
+    <meta name="auther" content="Raila Oliech">
   </head>
   <body>
     <header>
