--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Raila Oliech  | WDD 130</title>
-    <meta name="description" content="Raila Oliech BYU-Idaho coarse home page, leaning path web.">
-    <meta name="auther" content="Raila Oliech">
+    <meta name="description" content="Raila Oliech BYU-Idaho coarse home page, HTML, CSS learning path web site">
+    <meta name="author" content="Raila Oliech">
   </head>
   <body>
     <header>
@@ -34,7 +34,8 @@
       <img src="images/Kenya.jpg" alt="Kenya photo">
       <p>Kenya is located in East Africa. Its terrain rises from a low coastal plain on 
          the Indian Ocean to mountains and plateaus at its center. Most Kenyans live in 
-         the highlands, where Nairobi, the capital, sits at an altitude of 5,500 feet (1,700 meters).</p>
+         the highlands, where Nairobi, the capital, sits at an altitude of 5,500 feet 
+         (1,700 meters).</p>
     </aside>
     <footer>
       <p>©️2023 🌳 Raila Oliech  🌳  Nairobi, Kenya</p>
