--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
       <img src="images/Kenya.jpg" alt="Kenya photo">
       <p>Kenya is located in East Africa. Its terrain rises from a low coastal plain on 
          the Indian Ocean to mountains and plateaus at its center. Most Kenyans live in 
-         the highlands, where Nairobi, the capital, sits at an altitude of 5,500 feet 
-         (1,700 meters).</p>
+         the highlands, where Nairobi, the capital, sits at an altitude of 5,500 feet (1,700 meters).</p>
     </aside>
     <footer>
       <p>©️2023 🌳 Raila Oliech  🌳  Nairobi, Kenya</p>
