--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -25,9 +25,9 @@
         <h3>Audience</h3>
         <p>Websites are all about content. The purpose helps define what content you should include, 
            and the content should target your specific audience or audiences (websites can have more than one). 
-           Some questions and scenarios that can help drive site content include:
-        </p>
-        <h2>branding</h2>
+           Some questions and scenarios that can help drive site content include:</p>
+        
+          <h2>branding</h2>
 
         <h3>Website logo</h3>
         <img src="images/logos.png" alt="Rafting Siteplan logo">
