--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -20,7 +20,7 @@
            and handle every detail of the tripeveloping a site plan is a critical step in any web
            design and development process. Site plans help establish the purpose of the site, the 
            targeted message, and the overall look and feel. The plan provides a framework to apply 
-           consistently across the pages of a site. And It is a blueprint from which to design and develop.
+           consistently across the pages of a site..
         </p>
         <h3>Audience</h3>
         <p>Websites are all about content. The purpose helps define what content you should include, 
@@ -30,7 +30,7 @@
           <h2>branding</h2>
 
         <h3>Website logo</h3>
-        <img src="images/logos.png" alt="Rafting Siteplan logos">
+        <img src="images/pro.jpeg" alt="Rafting Siteplan logos">
 
         <h2>style guide</h2>
 
