--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -30,7 +30,7 @@
           <h2>branding</h2>
 
         <h3>Website logo</h3>
-        <img src="images/pro.jpeg" alt="Rafting Siteplan logos">
+        <img src="images/logos.png" alt="Rafting Siteplan logos">
 
         <h2>style guide</h2>
 
