--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -16,16 +16,28 @@
     <main>
         <h2>Overview</h2>
         <h2>purpose</h2>
-        <p>To help you get down the river, teach you to paddle, tell you about the river ecology, 
-           and handle every detail of the tripeveloping a site plan is a critical step in any web
-           design and development process. Site plans help establish the purpose of the site, the 
-           targeted message, and the overall look and feel. The plan provides a framework to apply 
-           consistently across the pages of a site..
+        <p>The rafting purpose people to Share Personal Interests among family, 
+           and friend to came and to enjoy adventures. we want to improve the quality of people lives
+           by opening up our world to new passions and people meet through the adventures we have. We have Hobbies improve brainpower by building
+           new mental pathways when they learn something new, by educating them about the river ecology. we need to provide an escape from the sometimes 
+           monotonous nature of daily life, and they help people to learn something about themselves in the process.
+           They can be a bonding experience, or an introspective exercise, or a way to meet new people.
         </p>
+        <p>We also need to build revenue so that we can support people in the society with relif food
+          also to raise money to support students education. This will ensure that  they get educated 
+          and persue their carrer objectives</p>
+
         <h3>Audience</h3>
-        <p>Websites are all about content. The purpose helps define what content you should include, 
-           and the content should target your specific audience or audiences (websites can have more than one). 
-           Some questions and scenarios that can help drive site content include:</p>
+        <p>The target market for whitewater rafting are especially in tourist cities. 
+           Families or visitors looking for activities while on vacation will make up a large
+           portion of your profits. we also terget die-hard water rafters who are looking to challenge
+           themselves on the big run. they must be 18 years and above. The visitors who may ne vacation, we provide
+           safe house for all with the the security. incase of emergency, we have well trained and qulified doctors
+           within the camp which will assist with fast aid. in terms of access to our site, you can do so through mobile
+           divice or laptop, will will be available anytime. We provide Inflatable Rafting Boat. Life Jacket for the safety of the rafters
+           Helmets and Carbon Paddles, Wetsuit. Our prices are affordable. We provide teaching to people who doesnt 
+           know even how to Paddle.
+           Drysuit.Rescue Throw Bags.</p>
         
           <h2>branding</h2>
 
@@ -35,6 +47,15 @@
         <h2>style guide</h2>
 
         <h3>color pallete</h3>
+        <p>
+          <ol>
+            <li>Bice blue: 396e94</li>
+            <li>Saffron: 396e94</li>
+            <li>Rufous: e7c24f</li>
+            <li>Dark purple: 381d2a</li>
+            <li>Olivine: aabd8c</li>
+          </ol>
+        </p>
         <p><a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a></p>
         <h3>Typography</h3>
         <h4>heading example font</h4>
