--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -36,8 +36,7 @@
            within the camp which will assist with fast aid. in terms of access to our site, you can do so through mobile
            divice or laptop, will will be available anytime. We provide Inflatable Rafting Boat. Life Jacket for the safety of the rafters
            Helmets and Carbon Paddles, Wetsuit. Our prices are affordable. We provide teaching to people who doesnt 
-           know even how to Paddle.
-           Drysuit.Rescue Throw Bags.</p>
+           know even how to Paddle. Drysuit.Rescue Throw Bags.</p>
         
           <h2>branding</h2>
 
