--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -55,6 +55,10 @@
         </ol>
         <p><a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a></p>
         <h3>Typography</h3>
+        <ul>
+          <li>Lora, Serif</li>
+          <li>Roboto, Sans Serif</li>
+        </ul>
         <h4>heading example font</h4>
         <h4>Normal Text/Paragraph example Font</h4>
         <h4>Lorem ipsum dolor sit amet consectur adipisicing elit. minima, inventor</h4>
