--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -46,23 +46,22 @@
         <h2>style guide</h2>
 
         <h3>color pallete</h3>
-        <ol>
-          <li>Bice blue: 396e94</li>
-          <li>Saffron: 396e94</li>
-          <li>Rufous: e7c24f</li>
-          <li>Dark purple: 381d2a</li>
-          <li>Olivine: aabd8c</li>
-        </ol>
-        <p><a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a></p>
+        
+        pallete URL: <p><a href="https://coolors.co/396e94-e7c24f-a43312-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-aabd8c</a></p>
+        <table class="colors">
+          <tr><th>primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
+          <tr><td class="Primary">Bice blue: #396e94</td><td class="Secondary">Saffron: #e7c24f</td><td class="Accent 1">Rufous: #a43312</td><td class="Accent 2">Olivine: #aabd8c</td></tr>
+        </table>
+
         <h3>Typography</h3>
         <ul>
           <li>Lora, Serif</li>
           <li>Roboto, Sans Serif</li>
         </ul>
-        <h4>heading example font</h4>
-        <h4>Normal Text/Paragraph example Font</h4>
+        <h4>heading example font[Times New Roman, serif]</h4>
+        <h4>Normal Text/Paragraph example Font[ Georgia, serif]</h4>
         <h4>Lorem ipsum dolor sit amet consectur adipisicing elit. minima, inventor</h4>
-        <h4>Colored collout Example Font</h4>
+        <h4>Colored collout Example Font[Helvetica]</h4>
         <h3>Navigation</h3>
         <nav>
             <a href="#">Home</a>
