--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -58,8 +58,8 @@
           <li>Lora, Serif</li>
           <li>Roboto, Sans Serif</li>
         </ul>
-        <h4>heading example font[Times New Roman, serif]</h4>
-        <h4>Normal Text/Paragraph example Font[ Georgia, serif]</h4>
+        <h4>heading example font: Roboto</h4>
+        <h4>Normal Text/Paragraph example Font: Open Sans</h4>
         <h4>Lorem ipsum dolor sit amet consectur adipisicing elit. minima, inventor</h4>
         <h4>Colored collout Example Font[Helvetica]</h4>
         <h3>Navigation</h3>
