--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -35,8 +35,8 @@
            safe house for all with the the security. incase of emergency, we have well trained and qulified doctors
            within the camp which will assist with fast aid. in terms of access to our site, you can do so through mobile
            divice or laptop, will will be available anytime. We provide Inflatable Rafting Boat. Life Jacket for the safety of the rafters
-           Helmets and Carbon Paddles, Wetsuit. Our prices are affordable. We provide teaching to people who doesnt 
-           know even how to Paddle. Drysuit.Rescue Throw Bags.</p>
+           Helmets and Carbon Paddles, Wetsuit, Drysuit and Rescue Throw Bags. Our prices are affordable. We provide teaching to people who doesnt 
+           know even how to Paddle.</p>
         
         <h2>branding</h2>
 
@@ -54,14 +54,18 @@
         </table>
 
         <h3>Typography</h3>
-        <ul>
-          <li>Lora, Serif</li>
-          <li>Roboto, Sans Serif</li>
-        </ul>
-        <h4>heading example font: Roboto</h4>
-        <h4>Normal Text/Paragraph example Font: Open Sans</h4>
-        <h4>Lorem ipsum dolor sit amet consectur adipisicing elit. minima, inventor</h4>
-        <h4>Colored collout Example Font[Helvetica]</h4>
+
+        <h4>heading example font: Roboto, sans-serif,</h4>
+        <h4>Paragraph example Font: Open Sans, Roboto Slab:Serif</h4>
+        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt animi vel modi aliquam nam sint saepe odit omnis, quia sapiente laudantium rerum. Dolore, dolores. Nihil reiciendis unde inventore voluptatibus dignissimos!</h4>
+        <h4>Colored collout Example Font:</h4>
+        <p class="Colored">
+          Trips vary from mild and great for Families. Trips help in physical fitnees it what makes people strong, Great for Cardio & Strengthening Muscles,
+          healthy and experience rafters. No matter any type of Rocky mountain Rafting you are seeking, white water Rafting company can make it happen to you in most
+          convenient way.
+        </p>
+
+      
         <h3>Navigation</h3>
         <nav>
             <a href="#">Home</a>
