--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -56,8 +56,10 @@
         <h3>Typography</h3>
 
         <h4>heading example font: Roboto, sans-serif,</h4>
-        <h4>Paragraph example Font: Open Sans, Roboto Slab:Serif</h4>
+
+        <h4>Normal Text/Paragraph example Font: Open Sans:sans-serif, Roboto Slab:Serif</h4>
         <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt animi vel modi aliquam nam sint saepe odit omnis, quia sapiente laudantium rerum. Dolore, dolores. Nihil reiciendis unde inventore voluptatibus dignissimos!</h4>
+
         <h4>Colored collout Example Font:</h4>
         <p class="Colored">
           Trips vary from mild and great for Families. Trips help in physical fitnees it what makes people strong, Great for Cardio & Strengthening Muscles,
