--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -63,7 +63,7 @@
         <h4>Colored collout Example Font:</h4>
         <p class="Colored">
           Trips vary from mild and great for Families. Trips help in physical fitnees it what makes people strong, Great for Cardio & Strengthening Muscles,
-          healthy and experience rafters. No matter any type of Rocky mountain Rafting you are seeking, white water Rafting company can make it happen to you in most
+          healthy and experience rafters. No matter any water Rafting you are seeking,  Rocky mountain white water Rafting company can make it happen to you in most
           convenient way.
         </p>
 
