--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -19,7 +19,7 @@
         <p>The rafting purpose people to Share Personal Interests among family, 
            and friend to came and to enjoy adventures. we want to improve the quality of people lives
            by opening up our world to new passions and people meet through the adventures we have. We have Hobbies improve brainpower by building
-           new mental pathways when they learn something new, by educating them about the river ecology. we need to provide an escape from the sometimes 
+           new mental pathways when they learn something new, by educating them about the mountain ecology. we need to provide an escape from the sometimes 
            monotonous nature of daily life, and they help people to learn something about themselves in the process.
            They can be a bonding experience, or an introspective exercise, or a way to meet new people.
         </p>
