--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Rafting Site Plan | Raila Oliech</title>
+    <title>Whitewater Rafting Site Plan | Raila Oliech</title>
     <meta name="description" content="The rafting site plan includes the site purpose, the target audience, branding information, and a style guide for the course website project.">
     <meta name="author" content="Raila Oliech">
     <link rel="stylesheet" href="styles/site-plan-rafting.css">
