--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -47,7 +47,7 @@
 
         <h3>color pallete</h3>
         
-        pallete URL: <p><a href="https://coolors.co/396e94-e7c24f-a43312-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-aabd8c</a></p>
+        <p><a href="https://coolors.co/396e94-e7c24f-a43312-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-aabd8c</a></p>
         <table class="colors">
           <tr><th>primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
           <tr><td class="Primary">Bice blue: #396e94</td><td class="Secondary">Saffron: #e7c24f</td><td class="Accent 1">Rufous: #a43312</td><td class="Accent 2">Olivine: #aabd8c</td></tr>
