--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-        <h1>Rafting Siteplan</h1>
+        <h1>Whitewater Rafting Siteplan</h1>
         <div>Raila Oliech</div>
     </header>
     <main>
