--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!--5/05/2023 -->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
@@ -15,6 +15,8 @@
         <a href="#">Home</a>
         <a href="wwr/">Education Website</a>
         <a href="wwr/site-plan-rafting.html">Learning Siteplan</a>
+        <a href="https://linkedin.com">linkedin</a>
+        <a href="https://facebook.com">facebook</a>
       </nav>
     </header>
     <main>
@@ -28,8 +30,15 @@
          confidence in our own capabilities, you'll also feel more ready to take on challenges
          and explore new business ventures. Acquiring new skills will unveil new opportunities 
          and help you find innovative solutions to problems.</p>
+
+
+      <ul class="box">
+      <li><a href="https://www.churchofjesuschrist.org/temples/details/barcelona-spain-temple?lang=eng" target="_blank">barcelona-spain-temple</a></li>
+      <li><a href="https://www.churchofjesuschrist.org/temples/details/belem-brazil-temple?lang=eng"target="_blank">belem-brazil-temple</a></li>
+      <li><a href="https://www.churchofjesuschrist.org/temples/details/bangkok-thailand-temple?lang=eng" target="_blank">bangkok-thailand-temple</a></li>
+      </ul>
     </main>
-    <aside>
+    <aside class="box">
       <h2>Kenya</h2>
       <img src="images/Kenya.jpg" alt="Kenya photo">
       <p>Kenya is located in East Africa. Its terrain rises from a low coastal plain on 
