--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Whitewater Rafting Site Plan | Raila Oliech</title>
+    <title>Whitewater Rafting Site Plan About Us| Raila Oliech</title>
     <meta name="description" content="The rafting site plan includes the site purpose, the target audience, branding information, and a style guide for the course website project.">
     <meta name="author" content="Raila Oliech">
     <link rel="stylesheet" href="styles/rafting.css">
