--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-        <img src="images/logo.png">
+        <img src="images/logo.png" alt="background imaage">
         <nav>
             <a href="index.html">index</a>
             <a href="about.html">about</a>
@@ -23,7 +23,7 @@
     <main>
         <div class="hero">
             <div class="herodiv">
-                <img src="images/raftin.jpg">
+                <img src="images/raftin.jpg" alt="rafting image">
                 <h1>Whitewater Rafting Siteplan</h1>
             </div>
             <article>
