--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,7 +24,7 @@
         <div class="hero">
             <div class="herodiv">
                 <img src="images/raftin.jpg" alt="rafting image">
-                <h1>Whitewater Rafting Siteplan</h1>
+                <h1>Rocky Whitewater Rafting Siteplan</h1>
             </div>
             <article>
                 <img src="images/happy-cliants.jpg" alt="Happy client">
@@ -34,7 +34,7 @@
                     new mental pathways when they learn something new, by educating them about the mountain ecology. we need to provide an escape from the sometimes 
                     monotonous nature of daily life, and they help people to learn something about themselves in the process.
                     They can be a bonding experience, or an introspective exercise, or a way to meet new people.
-                 </p>
+                </p>
             </article>
             <br>
             <section>
