--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Whitewater Rafting Site Plan About Us| Raila Oliech</title>
-    <meta name="description" content="The rafting site plan includes the site purpose, the target audience, branding information, and a style guide for the course website project.">
+    <meta name="description" content="The rafting site Oliech BYU-Idaho coarse home page, About Us Page.">
     <meta name="author" content="Raila Oliech">
     <link rel="stylesheet" href="styles/rafting.css">
   </head>
@@ -14,10 +14,10 @@
     <header>
         <img src="images/logo.png" alt="background imaage">
         <nav>
-            <a href="index.html">index</a>
-            <a href="about.html">about</a>
-            <a href="trips.html">trips</a>
-            <a href="contact.html">contact</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="trips.html">Trips</a>
+            <a href="contact.html">Contact Us</a>
         </nav>   
     </header>
     <main>
@@ -29,16 +29,17 @@
             <article>
                 <img src="images/happy-cliants.jpg" alt="Happy client">
                 <p>The rafting purpose people to Share Personal Interests among family, 
-                    and friend to came and to enjoy adventures. we want to improve the quality of people lives
-                    by opening up our world to new passions and people meet through the adventures we have. We have Hobbies improve brainpower by building
-                    new mental pathways when they learn something new, by educating them about the mountain ecology. we need to provide an escape from the sometimes 
-                    monotonous nature of daily life, and they help people to learn something about themselves in the process.
-                    They can be a bonding experience, or an introspective exercise, or a way to meet new people.
+                   and friend to came and to enjoy adventures. we want to improve the quality of people lives
+                   by opening up our world to new passions and people meet through the adventures we have. We have Hobbies improve brainpower by building
+                   new mental pathways when they learn something new, by educating them about the mountain ecology. we need to provide an escape from the sometimes 
+                   monotonous nature of daily life, and they help people to learn something about themselves in the process.
+                   They can be a bonding experience, or an introspective exercise, or a way to meet new people.
                 </p>
             </article>
             <br>
             <section>
                 <h2>HISTORY</h2>
+                <br>
                 <p>he enterprise that eventually came to be known as the Rocky Mountain base Company was established in St. 
                     Kosiga, Kosiga, in 1822 by James bass and Raila Oliech. Among the original employees, known 
                     as "Ashley's Hundred," were Jedediah Smith, who went on to take a leading role in the company's operations, 
@@ -46,18 +47,17 @@
                     partners who gave the enterprise the name "Rocky Mountain Fur Company."
                 </p>
             </section>
+        </div>    
+        <br>
+        <section>
+            <h2>ADVENTURES AWAITS YOU!</h2>
             <br>
-            <section>
-                <h2>ADVENTURES AWAITS YOU!</h2>
-                <br>
-                <div><img src="images/image1.jpg" alt="image1"></div>
-                <div><img src="images/image2.jpg" alt="image2"></div>
-                <div><img src="images/image3.jpg" alt="image3"></div>
-                <div><img src="images/image4.jpg" alt="image4"></div>
-                <div><img src="images/image5.jpg" alt="image5"></div>
-            
-            </section> 
-        </div>
+            <div><img src="images/image1.jpg" alt="image1"></div>
+            <div><img src="images/image2.jpg" alt="image2"></div>
+            <div><img src="images/image3.jpg" alt="image3"></div>
+            <div><img src="images/image4.jpg" alt="image4"></div>
+            <div><img src="images/image5.jpg" alt="image5"></div>            
+        </section>
     </main>
     <footer>
         <p>© 2023 🌳 Whitewater Rafting base 🌳 Raila Oliech</p>
