--- a/wwr/about.html
+++ b/wwr/about.html
@@ -30,7 +30,7 @@
                 <img src="images/happy-cliants.jpg" alt="Happy client">
                 <p>The rafting purpose people to Share Personal Interests among family, 
                    and friend to came and to enjoy adventures. we want to improve the quality
-                   of people lives
+                   of people lives.
                 </p>
             </article>
             <br>
