--- a/wwr/about.html
+++ b/wwr/about.html
@@ -30,10 +30,10 @@
                 <img src="images/happy-cliants.jpg" alt="Happy client">
                 <p>The rafting purpose people to Share Personal Interests among family, 
                    and friend to came and to enjoy adventures. we want to improve the quality of people lives
-                   by opening up our world to new passions and people meet through the adventures we have. We have Hobbies improve brainpower by building
-                   new mental pathways when they learn something new, by educating them about the mountain ecology. we need to provide an escape from the sometimes 
-                   monotonous nature of daily life, and they help people to learn something about themselves in the process.
-                   They can be a bonding experience, or an introspective exercise, or a way to meet new people.
+                   by opening up our world to new passions. Our motto is: Nothing beats river rafting. The company mission is: strive to accomplish all of 
+                   the above while operating a profitable, growing company that continues to create new opportunities 
+                   for our entire community and Sharing Nature - Enriching Lives. Company vision: To provide life-changing 
+                   travel experiences that have a positive impact on our guests, our guides and the people and places we visit.
                 </p>
             </article>
             <br>
@@ -41,10 +41,10 @@
                 <h2>HISTORY</h2>
                 <br>
                 <p>he enterprise that eventually came to be known as the Rocky Mountain base Company was established in St. 
-                    Kosiga, Kosiga, in 1822 by James bass and Raila Oliech. Among the original employees, known 
-                    as "Ashley's Hundred," were Jedediah Smith, who went on to take a leading role in the company's operations, 
-                    and Jim Bridger, who was among those who bought out Smith and his partners in 1830. It was Bridger and his 
-                    partners who gave the enterprise the name "Rocky Mountain Fur Company."
+                    Kosiga, Kosiga, in 2022 by James bass and Raila Oliech. Among the original employees, known 
+                    as "Jmes's Hundred," were Omari Ann, who went on to take a leading role in the company's operations, 
+                    and Jim Dave, who was among those who bought out Smith and his partners in 2023. It was Bridger and his 
+                    partners who gave the enterprise the name "Rocky Mountain base Company."
                 </p>
             </section>
         </div>    
