--- a/wwr/about.html
+++ b/wwr/about.html
@@ -29,8 +29,7 @@
             <article>
                 <img src="images/happy-cliants.jpg" alt="Happy client">
                 <p>The rafting purpose people to Share Personal Interests among family, 
-                   and friend to came and to enjoy adventures. we want to improve the quality of people lives
-                   by opening up our world to new passions. Our motto is: Nothing beats river rafting. The company mission is: strive to accomplish all of 
+                   and friend to came and to enjoy adventures. Our motto is: Nothing beats river rafting. The company mission is: strive to accomplish all of 
                    the above while operating a profitable, growing company that continues to create new opportunities 
                    for our entire community and Sharing Nature - Enriching Lives. Company vision: To provide life-changing 
                    travel experiences that have a positive impact on our guests, our guides and the people and places we visit.
