--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,7 +24,7 @@
         <div class="hero">
             <div class="herodiv">
                 <img src="images/raftin.jpg" alt="rafting image">
-                <h1>Rocky Rafting Siteplan</h1>
+                <h1>Rocky Whitewater Rafting Siteplan</h1>
             </div>
             <article>
                 <img src="images/happy-cliants.jpg" alt="Happy client">
