--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <nav>
         <a href="#">Home</a>
-        <a href="wwr/">Education Website</a>
+        <a href="wwr/">Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">Learning Siteplan</a>
         <a href="https://linkedin.com">linkedin</a>
         <a href="https://facebook.com">facebook</a>
