--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="styles/rafting.css">
   </head>
   <body>
-    <header class="navigation">
+    <header>
         <img src="images/logo.png" alt="background imaage">
-        <nav>
+        <nav class="navigation">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
